--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
-  "name": "nodejs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+	"name": "nodejs",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"task1": "nodemon ./basic/task1.js",
+		"task2": "nodemon ./basic/task2.js",
+		"task3": "nodemon --exec babel-node ./basic/task3.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"csvtojson": "^2.0.10"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.10.5",
+		"@babel/node": "^7.10.5",
+		"@babel/preset-env": "^7.10.4"
+	}
 }
