--- a/package.json
+++ b/package.json
@@ -2,20 +2,34 @@
 	"name": "nodejs",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "app.ts",
 	"scripts": {
-		"task1": "nodemon ./basic/task1.js",
-		"task2": "nodemon ./basic/task2.js",
-		"task3": "nodemon --exec babel-node ./basic/task3.js"
+		"start": "nodemon src/app.ts",
+		"build": "tsc --build"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"csvtojson": "^2.0.10"
+		"ajv": "^6.12.3",
+		"express": "^4.17.1",
+		"uuid": "^8.3.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.10.5",
-		"@babel/node": "^7.10.5",
-		"@babel/preset-env": "^7.10.4"
+		"@types/express": "^4.17.7",
+		"@types/node": "^14.0.27",
+		"@types/uuid": "^8.3.0",
+		"@typescript-eslint/eslint-plugin": "^3.9.0",
+		"@typescript-eslint/parser": "^3.9.0",
+		"eslint": "^7.6.0",
+		"nodemon": "^2.0.4",
+		"ts-node": "^8.10.2",
+		"typescript": "^3.9.7"
+	},
+	"nodemonConfig": {
+		"watch": [
+			"src"
+		],
+		"ext": "*.ts",
+		"exec": "ts-node --files"
 	}
 }
