--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"ajv": "^6.12.3",
+		"@hapi/joi": "^17.1.1",
 		"express": "^4.17.1",
+		"express-joi-validation": "^4.0.4-beta.0",
+		"joi-extract-type": "^15.0.8",
 		"uuid": "^8.3.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.7",
+		"@types/hapi__joi": "^17.1.4",
+		"@types/joi": "^14.3.4",
 		"@types/node": "^14.0.27",
 		"@types/uuid": "^8.3.0",
 		"@typescript-eslint/eslint-plugin": "^3.9.0",
