--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
 	"description": "",
 	"main": "app.ts",
 	"scripts": {
-		"start": "nodemon src/app.ts",
+		"start": "nodemon src/app.ts | bunyan",
 		"build": "tsc --build"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"@hapi/joi": "^17.1.1",
+		"@types/bunyan": "^1.8.6",
 		"@types/md5": "^2.2.0",
+		"bunyan": "^1.8.14",
 		"express": "^4.17.1",
 		"express-joi-validation": "^4.0.4-beta.0",
 		"joi-extract-type": "^15.0.8",
