--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
 	"dependencies": {
 		"@hapi/joi": "^17.1.1",
 		"@types/bunyan": "^1.8.6",
+		"@types/jsonwebtoken": "^8.5.0",
 		"@types/md5": "^2.2.0",
 		"bunyan": "^1.8.14",
 		"express": "^4.17.1",
 		"express-joi-validation": "^4.0.4-beta.0",
+		"express-jwt": "^6.0.0",
 		"joi-extract-type": "^15.0.8",
+		"jsonwebtoken": "^8.5.1",
 		"md5": "^2.3.0",
 		"pg": "^8.3.0",
 		"pg-hstore": "^2.3.3",
