--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "app.ts",
 	"scripts": {
-		"start": "nodemon src/app.ts | bunyan",
+		"start": "nodemon --require dotenv/config src/app.ts | bunyan",
 		"build": "tsc --build"
 	},
 	"author": "",
@@ -14,6 +14,7 @@
 		"@types/bunyan": "^1.8.6",
 		"@types/md5": "^2.2.0",
 		"bunyan": "^1.8.14",
+		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-joi-validation": "^4.0.4-beta.0",
 		"joi-extract-type": "^15.0.8",
@@ -24,6 +25,7 @@
 		"uuid": "^8.3.0"
 	},
 	"devDependencies": {
+		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.7",
 		"@types/hapi__joi": "^17.1.4",
 		"@types/joi": "^14.3.4",
@@ -32,6 +34,7 @@
 		"@typescript-eslint/eslint-plugin": "^3.9.0",
 		"@typescript-eslint/parser": "^3.9.0",
 		"eslint": "^7.6.0",
+		"jest": "^26.4.2",
 		"nodemon": "^2.0.4",
 		"ts-node": "^8.10.2",
 		"typescript": "^3.9.7"
