--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "app.ts",
 	"scripts": {
 		"start": "nodemon --require dotenv/config src/app.ts | bunyan",
-		"build": "tsc --build"
+		"build": "tsc --build",
+		"test": "jest --detectOpenHandles --color --coverage"
 	},
 	"author": "",
 	"license": "ISC",
@@ -25,17 +26,23 @@
 		"uuid": "^8.3.0"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.11.5",
+		"@babel/preset-typescript": "^7.10.4",
 		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.7",
 		"@types/hapi__joi": "^17.1.4",
+		"@types/jest": "^26.0.13",
 		"@types/joi": "^14.3.4",
 		"@types/node": "^14.0.27",
+		"@types/supertest": "^2.0.10",
 		"@types/uuid": "^8.3.0",
 		"@typescript-eslint/eslint-plugin": "^3.9.0",
 		"@typescript-eslint/parser": "^3.9.0",
+		"babel-polyfill": "^6.26.0",
 		"eslint": "^7.6.0",
 		"jest": "^26.4.2",
 		"nodemon": "^2.0.4",
+		"supertest": "^4.0.2",
 		"ts-node": "^8.10.2",
 		"typescript": "^3.9.7"
 	},
