--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/jsonwebtoken": "^8.5.0",
 		"@types/md5": "^2.2.0",
 		"bunyan": "^1.8.14",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"express-joi-validation": "^4.0.4-beta.0",
 		"express-jwt": "^6.0.0",
