--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
 	"license": "ISC",
 	"dependencies": {
 		"@hapi/joi": "^17.1.1",
-		"@types/bunyan": "^1.8.6",
-		"@types/jsonwebtoken": "^8.5.0",
-		"@types/md5": "^2.2.0",
 		"bunyan": "^1.8.14",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
@@ -28,9 +25,13 @@
 		"uuid": "^8.3.0"
 	},
 	"devDependencies": {
+		"@types/bunyan": "^1.8.6",
+		"@types/cors": "^2.8.7",
 		"@types/express": "^4.17.7",
 		"@types/hapi__joi": "^17.1.4",
 		"@types/joi": "^14.3.4",
+		"@types/jsonwebtoken": "^8.5.0",
+		"@types/md5": "^2.2.0",
 		"@types/node": "^14.0.27",
 		"@types/uuid": "^8.3.0",
 		"@typescript-eslint/eslint-plugin": "^3.9.0",
